--- a/Aula-WebDesigner/index.html
+++ b/Aula-WebDesigner/index.html
@@ -23,15 +23,11 @@
 <nav>
 <h1>Menu Principal</h1> 
 <ul type="">
-<li> Home</li>
-<li>Especificações</li>
-<li>Fotos</li>
-<li>Multimídia</li>
-<ul> 
-     <li>Fotos</li>
-     <li>Videos</li>
-</ul>
-<li>Fale conosco</li>
+<li><a href="index.html"> Home</li></a>
+<li><a href="specs.html">Especificações</li></a>
+<li><a href="fotos.html">Fotos</li></a>
+<li><a href="multimidia.html">Multimídia</li></a>
+<li><a href="fale-conosco.html">Fale conosco</li></a>
 
 </ul>
 </nav>
@@ -50,7 +46,7 @@
 
 
 <h2 > O que é</h2>
-<p > O <span style ="font-weight: 900;">Google Glass</span> é um acessório em forma de óculos que possibilita a interação dos usuários com diversos conteúdos em realidade aumentada. Também chamado de <i>Project Glass</i>, o eletrônico é capaz de tirar fotos a partir de comandos de voz, enviar mensagens instantâneas e realizar vídeoconferências. Seu lançamento está previsto para 2014, e seu preço deve ser de US$ 1,5 mil. Atualmente o Google Glass encontra-se em fase de testes e já possui um vídeo totalmente gravado com o dispositivo. Além disso, a companhia de buscas registrou novas patentes anti-furto e de desbloqueio de tela para o acessório.</p> 
+<p > O <span style ="font-weight: 900;">Google Glass</span> é um acessório em forma de óculos que possibilita a interação dos usuários com diversos conteúdos em realidade aumentada. Também chamado de <a href="http://google.com" target="_blank">Project Glass</a>, o eletrônico é capaz de tirar fotos a partir de comandos de voz, enviar mensagens instantâneas e realizar vídeoconferências. Seu lançamento está previsto para 2014, e seu preço deve ser de US$ 1,5 mil. Atualmente o Google Glass encontra-se em fase de testes e já possui um vídeo totalmente gravado com o dispositivo. Além disso, a companhia de buscas registrou novas patentes anti-furto e de desbloqueio de tela para o acessório.</p> 
 
 <figure class="foto-legenda">
      
