--- a/HTML5 and CSS3 course/index.html
+++ b/HTML5 and CSS3 course/index.html
@@ -18,7 +18,7 @@
 </hgroup>
 
 
-<img src="_imagens/glass-oculos-preto-peq.png">
+<img id="icone" src="_imagens/glass-oculos-preto-peq.png">
 
 <nav id="Menu">
 <h1>Menu Principal</h1> 
