--- a/HTML5 and CSS3 course/index.html
+++ b/HTML5 and CSS3 course/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+     <!DOCTYPE html>
 <html lang="pt-br">
      <head> 
 <meta charset ="UTF-8"/>
@@ -32,6 +32,12 @@
 </ul>
 </nav>
 </header>
+
+<section id="corpo">
+
+
+
+
 
 <hgroup> 
 <h3>Tecnologia > </br> Inovações</h3>
@@ -83,6 +89,8 @@ Memória Interna: 12GB</p>
 
 [AQUI ENTRA UM VÍDEO]
 
+</section>
+<aside id="lateral">
 <p> Outras Notícias
 Vídeo mais recente</p>
 
@@ -92,9 +100,13 @@ Vídeo mais recente</p>
 <p> O Google enfim revelou as especificações completas do Google Glass, e com ele uma surpresa ainda inédita no mercado: a gigante das buscas usará um sistema de áudio baseado na transdução por condução. Através das hastes dos óculos, o som será transmitido para o ouvido do usuário por meio de microvibrações em determinados ossos de sua cabeça, sem usar nenhum tipo de alto-falante.</p>
 
 <p>Além da surpresa do áudio, a tela montada a frente do olho do usuário também chamou atenção. Serão 640 x 360 pixels de resolução que, em proporção, equivaleria a um monitor de 25 polegadas de alta definição colocado a 2,5 metros de distância do espectador. </p>
+</aside>
 
-<h2> Copyright &copy;    2013 - by Gustavo Guanabara
-Facebook | Twitter </h2>
+<footer id="rodape">
+
+<p> Copyright &copy;    2013 - by Gustavo Guanabara<br/>
+Facebook | Twitter </p>
+</footer>
 
 </div>  
 </body>
